Do not translate Home tab name to Thuis Close #26

--- a/Resources/App_GlobalResources/GlobalResources.nl-NL.resx
+++ b/Resources/App_GlobalResources/GlobalResources.nl-NL.resx
@@ -145,7 +145,7 @@
     <value>Neem Contact met ons op</value>
   </data>
   <data name="//Home.String" xml:space="preserve">
-    <value>Thuis</value>
+    <value>Home</value>
   </data>
   <data name="//Host.String" xml:space="preserve">
     <value>Applicatie</value>
