--- a/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
@@ -151,33 +151,33 @@
     <value>Het herstellen van het wachtwoord is mislukt - de gebruikersnaam/token combinatie is ongeldig, of het token is verlopen.</value>
   </data>
   <data name="ForcedResetInfo.Text" xml:space="preserve">
-    <value>Het wachtwoord moet worden veranderd voor u kunt inloggen met uw account. Er is een wachtwoord reset link naar uw e-mailadres toegestuurd waarmee u een nieuw wachtwoord kunt aanmaken.</value>
+    <value>Het wachtwoord moet worden veranderd voordat je kunt inloggen met uw account. Er is een wachtwoordherstel link naar je e-mailadres toegestuurd waarmee je een nieuw wachtwoord kunt aanmaken.</value>
   </data>
   <data name="Password.Help" xml:space="preserve">
-    <value>Vul u wachtwoord in</value>
+    <value>Vul je wachtwoord in.</value>
   </data>
   <data name="Password.Required" xml:space="preserve">
-    <value>U moet een geldig wachtwoord opgeven</value>
+    <value>Je moet een geldig wachtwoord opgeven.</value>
   </data>
   <data name="Password.Text" xml:space="preserve">
     <value>Nieuw wachtwoord</value>
   </data>
   <data name="SuccesfulAttempt.Text" xml:space="preserve">
-    <value>Het wachtwoord voor dit gebruikersaccount is gewijzigd. </value>
+    <value>Het wachtwoord voor dit gebruikersaccount is gewijzigd.</value>
   </data>
   <data name="Username.Help" xml:space="preserve">
     <value>Voer de gebruikersnaam in die bij het token hoort.</value>
   </data>
   <data name="Username.Required" xml:space="preserve">
-    <value>U moet een gebruikersnaam opgeven</value>
+    <value>Je moet een gebruikersnaam opgeven</value>
   </data>
   <data name="Username.Text" xml:space="preserve">
     <value>Gebruikersnaam</value>
   </data>
   <data name="Answer.Required" xml:space="preserve">
-    <value>U moet het beveiligingsantwoord geven.</value>
+    <value>Je moet het beveiligingsantwoord opgeven.</value>
   </data>
   <data name="ResetLinkExpired.Text" xml:space="preserve">
-    <value>De wachtwoord reset link is vervallen en is niet langer geldig.</value>
+    <value>Deze wachtwoordherstel link is vervallen en is niet langer geldig.</value>
   </data>
 </root>
