--- a/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
@@ -136,13 +136,13 @@
     <value xml:space="preserve">We konden geen account vinden met dit e-mailadres. Probeer het opnieuw.</value>
   </data>
   <data name="EnterCode.Text">
-    <value xml:space="preserve">Vul uw verificatiecode in</value>
+    <value xml:space="preserve">Vul de verificatiecode in</value>
   </data>
   <data name="EnterUsername.Text">
-    <value xml:space="preserve">Vul uw gebruikersnaam in</value>
+    <value xml:space="preserve">Vul je gebruikersnaam in</value>
   </data>
   <data name="EnterUsernameEmail.Text">
-    <value xml:space="preserve">Vul uw gebruikersnaam of uw e-mailadres in dat u gebruikt heeft tijdens registratie bij deze site.</value>
+    <value xml:space="preserve">Vul je gebruikersnaam of e-mailadres in dat je gebruikt hebt tijdens registratie bij deze site.</value>
   </data>
   <data name="hlLogin.Text" xml:space="preserve">
     <value>Annuleren</value>
@@ -151,22 +151,22 @@
     <value xml:space="preserve">Onjuiste beveligingscode</value>
   </data>
   <data name="LoginFailed.Text">
-    <value xml:space="preserve">Inloggen mislukt. Let op: wachtwoorden zijn hoofdletter gevoelig.</value>
+    <value xml:space="preserve">Het inloggen is mislukt. Let op: wachtwoorden zijn hoofdlettergevoelig.</value>
   </data>
   <data name="MultipleUsers.Text" xml:space="preserve">
-    <value>Er zijn meerdere gebruikers met het zelfde e-mailadres gevonden. Geef uw gebruikersnaam in en probeer het opnieuw.</value>
+    <value>Er zijn meerdere gebruikers met het zelfde e-mailadres gevonden. Geef je gebruikersnaam in en probeer het opnieuw.</value>
   </data>
   <data name="OptionUnavailable.Text" xml:space="preserve">
-    <value>Het herstellen van uw wachtwoord is momenteel niet beschikbaar.</value>
+    <value>Het herstellen van je wachtwoord is momenteel niet beschikbaar.</value>
   </data>
   <data name="PasswordRetrievalDisabled.Text" xml:space="preserve">
-    <value>Het opvragen van wachtwoorden is niet ingeschakeld op deze site.  Neem contact met de beheerder van de site op om assistentie te krijgen bij het verkrijgen van de gegevens van uw account.</value>
+    <value>Het opvragen van wachtwoorden is niet ingeschakeld op deze site. Neem contact met de beheerder van de site op om assistentie te krijgen bij het verkrijgen van de gegevens van je account.</value>
   </data>
   <data name="PasswordSent.Text" xml:space="preserve">
-    <value>Als de ingevoerd gegevens correct waren, ontvangt u een e-mail met een link om het wachtwoord te resetten.</value>
+    <value>Als de ingevoerde gegevens correct waren, ontvang je een e-mail met een link om het wachtwoord opnieuw in te stellen.</value>
   </data>
   <data name="plAnswer.Help" xml:space="preserve">
-    <value>Geef het antwoord op uw wachtwoordvraag</value>
+    <value>Geef het antwoord op je wachtwoordvraag</value>
   </data>
   <data name="plAnswer.Text" xml:space="preserve">
     <value>Antwoord</value>
@@ -178,48 +178,48 @@
     <value>Beveiligingscode</value>
   </data>
   <data name="plEmail.Help" xml:space="preserve">
-    <value>U kunt het e-mailadres dat u gebruikt heeft tijdens de registratie bij deze website gebruiken om uw wachtwoord op te vragen.</value>
+    <value>Je kunt het e-mailadres dat je gebruikt hebt tijdens de registratie bij deze website gebruiken om je wachtwoord op te vragen.</value>
   </data>
   <data name="plEmail.Text" xml:space="preserve">
     <value>E-mailadres:</value>
   </data>
   <data name="plQuestion.Help" xml:space="preserve">
-    <value>De door u opgegeven wachtwoordvraag</value>
+    <value>De door jou opgegeven wachtwoordvraag</value>
   </data>
   <data name="plQuestion.Text">
-    <value xml:space="preserve">Wachtwoord vraag:</value>
+    <value xml:space="preserve">Wachtwoordvraag:</value>
   </data>
   <data name="plUsername.Help" xml:space="preserve">
-    <value>Voer hier uw gebruikersnaam in. In veel gevallen zal dit uw e-mailadres zijn.</value>
+    <value>Voer hier je gebruikersnaam in. In veel gevallen zal dit je e-mailadres zijn.</value>
   </data>
   <data name="plUsername.Text" xml:space="preserve">
     <value>Gebruikersnaam:</value>
   </data>
   <data name="RequiresQuestionAndAnswer.Text" xml:space="preserve">
-    <value> U dient antwoord te geven op de vraag die u tijdens de registratie heeft opgegeven.</value>
+    <value> Je moet antwoord geven op de vraag die je tijdens de registratie hebt opgegeven.</value>
   </data>
   <data name="RequiresUniqueEmail.Text" xml:space="preserve">
-    <value>&lt;br/&gt;&lt;br/&gt; U kunt het e-mailadres opvragen door uw emailadres of gebruikersnaam in te vullen.</value>
+    <value>&lt;br/&gt;&lt;br/&gt;Je kunt het e-mailadres opvragen door je emailadres of gebruikersnaam in te vullen.</value>
   </data>
   <data name="ResetPassword.Text" xml:space="preserve">
-    <value>Wachtwoord resetten</value>
+    <value>Wachtwoord herstellen</value>
   </data>
   <data name="ResetPasswordHelp.Text" xml:space="preserve">
-    <value>Het terug halen van wachtwoorden is voor deze site uitgeschakeld. U kunt wel een nieuw willekeurig wachtwoord laten genereren, welke per e-mail naar u zal worden toegezonden naar het adres dat u tijdens de registratie heeft opgegeven.</value>
+    <value>Het opvragen van wachtwoorden is voor deze site uitgeschakeld. Je kunt wel een nieuw willekeurig wachtwoord laten genereren, die per e-mail naar jou zal worden toegezonden naar het adres dat je tijdens de registratie hebt opgegeven.</value>
   </data>
   <data name="ResetToken.Text" xml:space="preserve">
-    <value>Verstuur reset link</value>
+    <value>Verstuur wachtwoordherstel link</value>
   </data>
   <data name="ResetTokenHelp.Text" xml:space="preserve">
-    <value>Als u uw wachtwoord bent vergeten wordt er een e-mail met een wachtwoord reset link naar het geregistreerde e-mailadres van het account gestuurd. Klik op de link om doorverwezen te worden naar de pagina waar u een nieuw wachtwoord kan instellen.</value>
+    <value>Als je je wachtwoord bent vergeten wordt er een e-mail met een wachtwoordherstel link naar het geregistreerde e-mailadres van dit account gestuurd. Klik op de link om doorverwezen te worden naar de pagina waar je een nieuw wachtwoord kunt instellen.</value>
   </data>
   <data name="SendPassword.Text" xml:space="preserve">
     <value>Wachtwoord verzenden</value>
   </data>
   <data name="SMTPNotConfigured.Text" xml:space="preserve">
-    <value>Verzending van de e-mail is mislukt. SMTP niet correcte geconfigureerd.</value>
+    <value>Verzending van de e-mail is mislukt. De SMTP is niet correct geconfigureerd.</value>
   </data>
   <data name="UserLockedOut.Text" xml:space="preserve">
-    <value>Dit account is vergrendeld na te veel mislukte inlog pogingen. Wacht alstublieft 10 minuten alvorens opnieuw te proberen. Als u uw wachtwoord vergeten bent, probeer dan gebruik te maken van de wachtwoord herinnering, alvorens contact op te nemen met een beheerder.</value>
+    <value>Dit account is vergrendeld na te veel mislukte inlog pogingen. Wacht alstublieft 10 minuten alvorens het opnieuw te proberen. Als je je wachtwoord vergeten bent, probeer dan gebruik te maken van de optie wachtwoord herstellen, alvorens contact op te nemen met een beheerder.</value>
   </data>
 </root>
