--- a/Resources/admin/Modules/App_LocalResources/ModulePermissions.ascx.nl-NL.resx
+++ b/Resources/admin/Modules/App_LocalResources/ModulePermissions.ascx.nl-NL.resx
@@ -13,7 +13,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ControlTitle_module.Text">
-    <value xml:space="preserve">Module </value>
+    <value xml:space="preserve">Module</value>
   </data>
   <data name="InheritPermissions.Text">
     <value xml:space="preserve">Erf&lt;b&gt;View&lt;/b&gt; machtiging van&lt;b&gt;Page&lt;/b&gt;</value>
@@ -22,7 +22,7 @@
     <value xml:space="preserve">Machtigingen</value>
   </data>
   <data name="plPermissions.Help" lastModified="2015-12-30 09:09:01">
-    <value xml:space="preserve">Selecteer de weergave en bewerk machtigingen door de betreffende checkboxen aan of uit te vinken. Selecteer de erf weergave machtiging optie om de module de weergave rechten van de pagina te laten overnemen.</value>
+    <value xml:space="preserve">Selecteer de weergave- en bewerkmachtigingen door de betreffende checkboxen aan of uit te vinken. Selecteer de - erf weergave - machtiging optie om de module de weergaverechten van de pagina te laten overnemen.</value>
   </data>
   <data name="plPermissions.Text">
     <value xml:space="preserve">Machtigingen:</value>
