--- a/Resources/admin/Modules/App_LocalResources/ModuleSettings.ascx.nl-NL.resx
+++ b/Resources/admin/Modules/App_LocalResources/ModuleSettings.ascx.nl-NL.resx
@@ -13,25 +13,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AllowIndexLabel.Help">
-    <value xml:space="preserve">Deze instelling bepaald of de zoek spider deze module mag indexeren.</value>
+    <value xml:space="preserve">Deze instelling bepaalt of de zoek spider deze module mag indexeren.</value>
   </data>
   <data name="AllowIndexLabel.Text" lastModified="2015-12-30 04:14:30">
     <value xml:space="preserve">Indexering toestaan</value>
   </data>
   <data name="Appearance.Text">
-    <value xml:space="preserve">Basis Instellingen</value>
+    <value xml:space="preserve">Basis instellingen</value>
   </data>
   <data name="Bind.Text">
     <value xml:space="preserve">Koppelen</value>
   </data>
   <data name="CacheDuration.Help">
-    <value xml:space="preserve">Geef de duur (in seconden) op voor de cache van deze pagina. Dit moet een integer zijn.</value>
+    <value xml:space="preserve">Geef de duur (in seconden) op voor de cache van deze pagina. Dit moet een heel getal zijn.</value>
   </data>
   <data name="CacheDuration.Text">
-    <value xml:space="preserve">Duur van de Cache (seconden)</value>
+    <value xml:space="preserve">Duur van de cache (seconden)</value>
   </data>
   <data name="CacheDurationWarning.Text">
-    <value xml:space="preserve">Deze module heeft de aanbeveling om caching uit te schakelen (selecteer GEEN bij de Output Cache Provider in de onderstaande lijst). Cache inschakelen voor deze module is niet aanbevolen en kan er voor zorgen dat deze module stale data toont.</value>
+    <value xml:space="preserve">Deze module heeft de aanbeveling om caching uit te schakelen (selecteer GEEN bij de Output Cache Provider in de onderstaande lijst). Cache inschakelen voor deze module is niet aanbevolen en kan er voor zorgen dat deze module verouderde data toont.</value>
   </data>
   <data name="CacheInherited.Text">
     <value xml:space="preserve">Geërfde</value>
@@ -43,7 +43,7 @@
     <value xml:space="preserve">Output Cache Provider</value>
   </data>
   <data name="CacheSettings.Text">
-    <value xml:space="preserve">Cache Instellingen</value>
+    <value xml:space="preserve">Cache instellingen</value>
   </data>
   <data name="cmdClearAllTabModuleCache.Text">
     <value xml:space="preserve">Verwijder de cache voor alle modules</value>
@@ -58,46 +58,46 @@
     <value xml:space="preserve">Module</value>
   </data>
   <data name="ControlTitle_settings.Text">
-    <value xml:space="preserve">{0} Instellingen</value>
+    <value xml:space="preserve">{0} instellingen</value>
   </data>
   <data name="CreateBoundCopies.Text">
-    <value xml:space="preserve">Maak Gekoppelde Kopieën</value>
+    <value xml:space="preserve">Maak gekoppelde kopieën</value>
   </data>
   <data name="cultureLabel.Help">
     <value xml:space="preserve">De taal voor deze module</value>
   </data>
   <data name="cultureLabel.Text">
-    <value xml:space="preserve">Module Taal:</value>
+    <value xml:space="preserve">Module taal:</value>
   </data>
   <data name="CustomSettings.Text">
-    <value xml:space="preserve">{0} Instellingen</value>
+    <value xml:space="preserve">{0} instellingen</value>
   </data>
   <data name="defaultCultureLabel.Help">
     <value xml:space="preserve">Klik op deze link om deze versie van de module in de oorspronkelijke taal te zien</value>
   </data>
   <data name="defaultCultureLabel.Text">
-    <value xml:space="preserve">Standaar Cultuur:</value>
+    <value xml:space="preserve">Standaard cultuur:</value>
   </data>
   <data name="edit.Text">
     <value xml:space="preserve">Wijzigen</value>
   </data>
   <data name="ExpandAll.Text">
-    <value xml:space="preserve">Alle Uitvouwen</value>
+    <value xml:space="preserve">Alle uitvouwen</value>
   </data>
   <data name="GeneralDetails.Text">
-    <value xml:space="preserve">Basis Instellingen</value>
+    <value xml:space="preserve">Basis instellingen</value>
   </data>
   <data name="InheritPermissions.Text">
-    <value xml:space="preserve">Erf weergave bevoegdheden van pagina</value>
+    <value xml:space="preserve">Erf weergavebevoegdheden van pagina</value>
   </data>
   <data name="InstalledOn.Help">
-    <value xml:space="preserve">Geef de pagina's weer waarop deze module is geplaatst. Een bestaande module kan aan andere pagina's worden toegevoegd d.m.v. de "Gebruik Bestaande Module" feature. Deze lijst zal alleen pagina's weergeven indien de module is toegevoegd middels de "Gebruik Bestaande Module" feature.</value>
+    <value xml:space="preserve">Geef de pagina's weer waarop deze module is geplaatst. Een bestaande module kan aan andere pagina's worden toegevoegd d.m.v. de "Gebruik bestaande module" instelling. Deze lijst zal alleen pagina's weergeven indien de module is toegevoegd middels de "Gebruik bestaande module" instelling.</value>
   </data>
   <data name="InstalledOn.Text">
     <value xml:space="preserve">Deze module is toegevoegd aan de volgende pagina's:</value>
   </data>
   <data name="isShareableLabel.Help">
-    <value xml:space="preserve">Vink deze optie aan als u deze module wilt delen over meerdere websites.</value>
+    <value xml:space="preserve">Vink deze optie aan als je deze module wilt delen op meerdere websites.</value>
   </data>
   <data name="isShareableLabel.Text">
     <value xml:space="preserve">Is deelbaar?</value>
@@ -109,16 +109,16 @@
     <value xml:space="preserve">Alleen weergave?</value>
   </data>
   <data name="lblCachedItemCount.Text">
-    <value xml:space="preserve">Huidige Cache Aantal: {0} item voor deze tab module</value>
+    <value xml:space="preserve">Huidige cache aantal: {0} item voor deze tab module</value>
   </data>
   <data name="lblNoRecords.Text">
     <value xml:space="preserve">Deze module is niet toegevoegd aan andere pagina's.</value>
   </data>
   <data name="LocalizedModules.Text">
-    <value xml:space="preserve">Module Vertaling</value>
+    <value xml:space="preserve">Module vertaling</value>
   </data>
   <data name="ModuleExists.Text">
-    <value xml:space="preserve">Deze module bestaat al op de doel pagina (het kan ook in de prullenmand zitten), en slechts één instance van een module kan op een pagina bestaan.</value>
+    <value xml:space="preserve">Deze module bestaat al op de doelpagina (deze kan ook in de prullenmand zitten) en slechts één instantie van een module kan op een pagina bestaan.</value>
   </data>
   <data name="ModuleHelp.Text">
     <value xml:space="preserve">&lt;h1&gt;Instellingen voor module&lt;/h1&gt;&lt;p&gt;Beheerders kunnen de instellingen voor deze module beheren. Deze instellingen omvatten karakteristieken van de module, bevoegdheden en weergave eigenschappen.&lt;/p&gt;</value>
@@ -130,22 +130,22 @@
     <value xml:space="preserve">Instellingen voor module</value>
   </data>
   <data name="MonikerExists.Text" lastModified="2016-03-08 12:04:40">
-    <value xml:space="preserve">De nieuwe waarde van de moniker bestaat al; deze moet uniek zijn binnen het portaal.</value>
+    <value xml:space="preserve">De nieuwe waarde van de naam bestaat al; deze moet uniek zijn binnen de website.</value>
   </data>
   <data name="MsgInstalledOnAll.Text">
     <value xml:space="preserve">Deze module instantie wordt op alle pagina's weergegeven.</value>
   </data>
   <data name="MsgInstalledOnNone.Text">
-    <value xml:space="preserve">Deze module instantie is niet aan enig andere pagina toegevoegd.</value>
+    <value xml:space="preserve">Deze module instantie is niet aan een andere pagina toegevoegd.</value>
   </data>
   <data name="OtherSettings.Text">
-    <value xml:space="preserve">Geavanceerde Instellingen</value>
+    <value xml:space="preserve">Geavanceerde instellingen</value>
   </data>
   <data name="Page.Header">
     <value xml:space="preserve">Pagina</value>
   </data>
   <data name="PageSettings.Text">
-    <value xml:space="preserve">Pagina Instellingen</value>
+    <value xml:space="preserve">Pagina instellingen</value>
   </data>
   <data name="Permissions.Text">
     <value xml:space="preserve">Machtigingen</value>
@@ -154,7 +154,7 @@
     <value xml:space="preserve">Vink deze optie aan om voor beheerders rode randen rond een module weer te geven wanneer deze op de site inloggen.</value>
   </data>
   <data name="plAdminBorder.Text">
-    <value xml:space="preserve">Verberg Rand Beheerder</value>
+    <value xml:space="preserve">Verberg rand beheerder</value>
   </data>
   <data name="plAlign.Help" lastModified="2015-12-30 04:14:30">
     <value xml:space="preserve">Kies de uitlijning van de module content.</value>
@@ -163,13 +163,13 @@
     <value xml:space="preserve">Uitlijning:</value>
   </data>
   <data name="plAllModules.Help">
-    <value xml:space="preserve">Selecteer deze optie als u wilt dat de pagina-instellingen voor deze module worden toegepast op alle bestaande modules in de site. Deze optie is  alleen beschikbaar voor Portaal beheerders en superusers.</value>
+    <value xml:space="preserve">Selecteer deze optie als je wilt dat de pagina-instellingen voor deze module worden toegepast op alle bestaande modules in de site. Deze optie is alleen beschikbaar voor site beheerders en superusers.</value>
   </data>
   <data name="plAllModules.Text" lastModified="2015-12-30 06:19:44">
     <value xml:space="preserve">Op alle modules toepassen</value>
   </data>
   <data name="plAllTabs.Help" lastModified="2015-12-30 04:14:30">
-    <value xml:space="preserve">Vink deze optie aan als u wilt dat deze module op dezelfde plaats op alle pagina's binnen de website weergeven moet worden.</value>
+    <value xml:space="preserve">Vink deze optie aan als je wilt dat deze module op dezelfde plaats op alle pagina's binnen de website weergeven moet worden.</value>
   </data>
   <data name="plAllTabs.Text" lastModified="2015-12-30 06:19:44">
     <value xml:space="preserve">Module weergeven op alle pagina's</value>
@@ -193,10 +193,10 @@
     <value xml:space="preserve">Kleur:</value>
   </data>
   <data name="plDefault.Help" lastModified="2015-12-30 06:19:44">
-    <value xml:space="preserve">Selecteer deze optie als u wilt dat de pagina-instellingen voor deze module worden gebruikt als de standaard instellingen bij het toevoegen van nieuwe modules. Deze optie is alleen beschikbaar voor website beheerders.</value>
+    <value xml:space="preserve">Selecteer deze optie als je wilt dat de pagina-instellingen voor deze module worden gebruikt als de standaard instellingen bij het toevoegen van nieuwe modules. Deze optie is alleen beschikbaar voor site beheerders.</value>
   </data>
   <data name="plDefault.Text" lastModified="2015-12-30 04:14:30">
-    <value xml:space="preserve">Instellen als Standaard Instellingen</value>
+    <value xml:space="preserve">Instellen als standaard instellingen</value>
   </data>
   <data name="plDisplayPrint.Help">
     <value xml:space="preserve">Vink deze optie aan als het mogelijk is deze module af te drukken (het printer symbool wordt dan, mits mogelijk binnen de skin, weergegeven)</value>
@@ -205,19 +205,19 @@
     <value xml:space="preserve">Afdrukken toestaan</value>
   </data>
   <data name="plDisplaySyndicate.Help">
-    <value xml:space="preserve">Vink deze optie aan als u RSS beschikbaar wilt maken voor deze module</value>
+    <value xml:space="preserve">Vink deze optie aan als je RSS beschikbaar wilt maken voor deze module</value>
   </data>
   <data name="plDisplaySyndicate.Text" lastModified="2015-12-30 06:19:44">
     <value xml:space="preserve">Syndicatie toestaan</value>
   </data>
   <data name="plDisplayTitle.Help" lastModified="2015-12-30 06:19:44">
-    <value xml:space="preserve">Vink deze optie aan als u de module container wilt laten weergeven.</value>
+    <value xml:space="preserve">Vink deze optie aan als je de module container wilt laten weergeven.</value>
   </data>
   <data name="plDisplayTitle.Text" lastModified="2015-12-30 04:14:30">
     <value xml:space="preserve">Container weergeven</value>
   </data>
   <data name="plEndDate.Help">
-    <value xml:space="preserve">Voer een einddatum in voor weergave van deze module. Na deze datum wordt de module automatisch verborgen. U kunt de kalender popup gebruiken om een datum te selecteren.</value>
+    <value xml:space="preserve">Voer een einddatum in voor weergave van deze module. Na deze datum wordt de module automatisch verborgen. Je kunt de kalender popup gebruiken om een datum te selecteren.</value>
   </data>
   <data name="plEndDate.Text">
     <value xml:space="preserve">Einddatum:</value>
@@ -256,7 +256,7 @@
     <value xml:space="preserve">Een unieke identificatie voor deze module op de pagina. Deze kan worden gebruikt door WEB API callers om de inhoud van de tab en de module te kunnen bepalen.</value>
   </data>
   <data name="plMoniker.Text" lastModified="2018-07-18 13:17:08">
-    <value xml:space="preserve">Module Moniker:</value>
+    <value xml:space="preserve">Module naam:</value>
   </data>
   <data name="plNewTabs.Help" lastModified="2015-12-30 06:19:44">
     <value xml:space="preserve">Schakel dit vakje in om de module alleen toe te voegen aan nieuwe pagina's. Deze optie is  alleen beschikbaar voor website beheerders.</value>
@@ -271,7 +271,7 @@
     <value xml:space="preserve">Bevoegdheden:</value>
   </data>
   <data name="plStartDate.Help">
-    <value xml:space="preserve">Voer een begindatum in voor weergave van deze module. Vóór deze datum wordt de module automatisch verborgen. U kunt de kalender pop-up gebruiken om een datum te selecteren.</value>
+    <value xml:space="preserve">Voer een begindatum in voor weergave van deze module. Vóór deze datum wordt de module automatisch verborgen. Je kunt de kalender pop-up gebruiken om een datum te selecteren.</value>
   </data>
   <data name="plStartDate.Text">
     <value xml:space="preserve">Begindatum:</value>
@@ -292,7 +292,7 @@
     <value xml:space="preserve">Geef een titel op voor deze module. Deze titel zal, als dat ondersteund wordt door de container, weergegeven worden in de titelbalk van de container van deze module.</value>
   </data>
   <data name="plTitle.Text">
-    <value xml:space="preserve">Module Titel:</value>
+    <value xml:space="preserve">Module titel:</value>
   </data>
   <data name="plVisibility.Help">
     <value xml:space="preserve">Kies de standaard zichtbaarheid voor deze module</value>
@@ -301,34 +301,34 @@
     <value xml:space="preserve">Zichtbaarheid:</value>
   </data>
   <data name="plWebSlice.Help">
-    <value xml:space="preserve">Aanvinken om van deze module een IE8 Web Slice te maken.</value>
+    <value xml:space="preserve">Aanvinken om van deze module een IE8 Web slice te maken.</value>
   </data>
   <data name="plWebSlice.Text" lastModified="2015-12-30 06:19:44">
-    <value xml:space="preserve">Is een Web Slice</value>
+    <value xml:space="preserve">Is een Web slice</value>
   </data>
   <data name="plWebSliceExpiry.Help">
-    <value xml:space="preserve">Geef een datum op wanneer de Web Slice zal verlopen - indien leeg gelaten zal de einddatum van de module worden gebruikt</value>
+    <value xml:space="preserve">Geef een datum op wanneer de Web slice zal verlopen - indien leeg gelaten zal de einddatum van de module worden gebruikt</value>
   </data>
   <data name="plWebSliceExpiry.Text">
-    <value xml:space="preserve">Web Slice Verloopt</value>
+    <value xml:space="preserve">Web slice verloopt</value>
   </data>
   <data name="plWebSliceTitle.Help">
-    <value xml:space="preserve">Geef een titel op voor de Web Slice - indien u dit leeg laat zal de titel van de module worden gebruikt.</value>
+    <value xml:space="preserve">Geef een titel op voor de Web slice - indien je dit leeg laat zal de titel van de module worden gebruikt.</value>
   </data>
   <data name="plWebSliceTitle.Text">
-    <value xml:space="preserve">Titel Web Slice</value>
+    <value xml:space="preserve">Titel Web slice</value>
   </data>
   <data name="plWebSliceTTL.Help">
-    <value xml:space="preserve">Geef de Time to Live (TTL) in minuten op voor deze Web Slice. Indien leeg gelaten zal de standaard cache tijd worden gebruikt  (geconverteerd naar minuten)</value>
+    <value xml:space="preserve">Geef de Time To Live (TTL) in minuten op voor deze Web slice. Indien leeg gelaten zal de standaard cache tijd worden gebruikt  (geconverteerd naar minuten)</value>
   </data>
   <data name="plWebSliceTTL.Text">
-    <value xml:space="preserve">Web Slice TTL:</value>
+    <value xml:space="preserve">Web slice TTL:</value>
   </data>
   <data name="PreviewNoSelectionMessage.Text">
     <value xml:space="preserve">Gelieve een container te selecteren om een vooruitblik te kunnen zien.</value>
   </data>
   <data name="Security.Text">
-    <value xml:space="preserve">Geavanceerde Instellingen</value>
+    <value xml:space="preserve">Geavanceerde instellingen</value>
   </data>
   <data name="Site.Header">
     <value xml:space="preserve">Site</value>
@@ -343,13 +343,13 @@
     <value xml:space="preserve">Markeer als niet-vertaald</value>
   </data>
   <data name="valBorder.ErrorMessage">
-    <value xml:space="preserve">Ongeldige Rand (moet een getal tussen 0 en 9 zijn)</value>
+    <value xml:space="preserve">Ongeldige rand (moet een getal tussen 0 en 9 zijn)</value>
   </data>
   <data name="valCacheTime.ErrorMessage">
-    <value xml:space="preserve">Ongeldige Cache Time</value>
+    <value xml:space="preserve">Ongeldige cache tijd</value>
   </data>
   <data name="valEndDate.ErrorMessage">
-    <value xml:space="preserve">Ongeldige Einddatum</value>
+    <value xml:space="preserve">Ongeldige einddatum</value>
   </data>
   <data name="valEndDate2.ErrorMessage">
     <value xml:space="preserve">Einddatum moet na startdatum liggen</value>
@@ -358,7 +358,7 @@
     <value xml:space="preserve">Ongeldige startdatum</value>
   </data>
   <data name="valWebSliceExpiry.ErrorMessage">
-    <value xml:space="preserve">Ongeldige Vervaldatum</value>
+    <value xml:space="preserve">Ongeldige vervaldatum</value>
   </data>
   <data name="valWebSliceTTL.ErrorMessage">
     <value xml:space="preserve">Ongeldige TTL - waarde moet een getal zijn</value>
